# flood-assistance-system

./: .dockerignore  .env  .env.dev.example  .env.example  .env.prod.example  .gitignore  Dockerfile  README.md  app.py  client.py  config.py  docker-compose.override.yml  docker-compose.yml  main.py  pyproject.toml  server.py  settings.py
.devcontainer/: Dockerfile  devcontainer.json
backend/: Dockerfile  app.py  pyproject.toml  server.py  settings.py
backend/src/domain/: chat.py
backend/src/gateways/: llm_agent.py
backend/src/prompts/: chat.py
backend/src/routes/: chat.py
backend/src/usecases/: chat.py  mcp_manager.py
frontend/: app.json  package-lock.json  package.json
frontend/app/: +html.tsx  +not-found.tsx  _layout.tsx  chat.tsx  index.tsx  modal.tsx
frontend/components/: CaptchaGate.tsx  EditScreenInfo.tsx  Themed.tsx
frontend/components/chat/: ChatInput.tsx  Icon.tsx  LocationModal.tsx  Logo.tsx  MessageList.tsx  SessionExpiredModal.tsx  SuggestionCard.tsx
frontend/constants/: Colors.ts
frontend/helpers/: location.tsx  session.ts
frontend/hooks/: useLocation.ts  useSocket.ts
frontend/services/: api.ts  chatService.ts
frontend/styles/: chat.ts
frontend/types/: chat.ts  location.ts
nginx/: Dockerfile  nginx.conf  nginx.dev.conf
src/middlewares/: cors.py
src/prompts/: chat.py
src/routes/: __init__.py  chat.py
src/usecases/: chat.py  mcp_manager.py
