[project]
name = "flood-assistance-system"
version = "0.1.0"
description = "Assistance system for users in vulnerable situations during flooding events, providing geospatial guidance, safety instructions and meteorological information."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.24",
    "langchain-google-genai>=3.1.0",
    "langchain-mcp-adapters>=0.0.9",
    "langgraph>=0.3.34",
    "mcp[cli]>=1.6.0",
    "python-dotenv>=1.1.0",
    "pydantic>=2.0",
    "requests>=2.32.3",
    "flask (>=3.1.2,<4.0.0)",
    "flask-socketio>=5.5.1",
    "python-socketio>=5.14.3",
    "simple-websocket>=1.1.0",
    "gunicorn>=23.0.0",
    "haversine>=2.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2,<9.0.0",
]
